2017-06-27  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This commit syncrhonizes with all the work on the ri5cy_wip branch
	as far as it makes sense.

	* server/main.cpp (main): Tidy up a comment
	* targets/ri5cy/Ri5cyImpl.cpp: Include iostream and more Verilator
	model headers.
	(Ri5cyImpl::resume): Remove unused attributes and add
	implementation.
	(Ri5cyImpl::readRegister): Turn do-while into while loop when
	looking for rvalid.
	(Ri5cyImpl::writeRegister): Add implementation.
	(Ri5cyImpl::read, Ri5cyImpl::write): Add task based
	implementation..

2017-06-27  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Add VCD generation as an option.

	* server/GdbServer.cpp (GdbServer::rspCommand): Pass argument to
	reset.
	* server/Makefile.am: Add more target libraries.
	* server/Makefile.in: Regenerated.
	* server/TraceFlags.cpp (TraceFlags::traceVcd): Created.
	* server/TraceFlags.h: Add traceVcd method and constant.
	* server/main.cpp: Include Ri5cy.h, make cpu static global.
	(main): Allow RI5CY target.
	(sc_time_stamp): Created.
	* targets/ITarget.h (class ITarget): Add constructor to take
	boolean arg, correct void argument lists, add timeStamp.
	* targets/picorv32/Picorv32.cpp (Picorv32::Picorv32): Pass in
	argument to select VCD.
	(Picorv32::timeStamp): Created.
	* targets/picorv32/Picorv32.h (class Picorv32): Add constructor to take
	boolean arg, correct void argument lists, add timeStamp.
	* targets/picorv32/Picorv32Impl.cpp (Picorv32Impl::Picorv32Impl):
	Initialize VCD.
	(Picorv32Impl::~Picorv32Impl): Close VCD.
	(Picorv32Impl::clockStep, Picorv32Impl::writeProgramAddr):
	Generate VCD when stepping.
	(Picorv32Impl::timeStamp): Created.
	* targets/picorv32/Picorv32Impl.h (class Picorv32Impl): Pass flag
	to constructor, add timeStamp method, add VCD member variables.
	* targets/ri5cy/Makefile.am: Add C include dirs.
	* targets/ri5cy/Makefile.in: Regenerated.
	* targets/ri5cy/Ri5cy.cpp (Ri5cy::Ri5cy): Add constructor to take